@@ -20,6 +20,7 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha4...master[Check the HEAD d
 *Metricbeat*
 
 *Packetbeat*
+- Use af_packet based sniffer by default on linux. {pull}2048[2048]
 
 *Topbeat*
 
